<resources>
    <string name="app_name">Погода</string>
    <string name="v_novgorod">Великий Новгород</string>
    <string name="vladimir">Владимир</string>
    <string name="moscow">Москва</string>
    <string name="st_petersburg">Санкт-Петербург</string>
    <string name="kazan">Казань</string>
    <string name="kaliningrad">Калининград</string>
    <string name="n_novgorod">Нижний Новгород</string>
    <string name="penza">Пенза</string>
    <string name="pereslavl_z">Переславль-Залесский</string>
    <string name="samara">Самара</string>
    <string name="s_posad">Сергиев Посад</string>
    <string name="suzdal">Суздаль</string>
    <string name="tula">Тула</string>
    <string name="cheboksary">Чебоксары</string>
    <string name="yaroslavl">Ярославль</string>
    <string name="choose_city">Выбрать город</string>
    <string name="icon_weather">Icon Weather</string>
    <string name="after_tomorrow">Послезавтра</string>
    <string name="tomorrow">Завтра</string>
    <string name="today">Сегодня</string>
    <string name="back">Назад</string>
    <string name="icon">Icon</string>
    <string name="weather_for_day">Прогноз на день</string>
    <string name="vladivostok">Владивосток</string>
    <string name="dmitrov">Дмитров</string>
    <string name="klin">Клин</string>
    <string name="ozery">Озёры</string>
    <string name="ryazan">Рязань</string>
    <string name="anadyr">Анадырь</string>
    <string name="arkhangelsk">Архангельск</string>
    <string name="blagoveshchensk">Благовещенск</string>
    <string name="bryansk">Брянск</string>
    <string name="chelyabinsk">Челябинск</string>
    <string name="ekaterinburg">Екатеринбург</string>
    <string name="elista">Элиста</string>
    <string name="irkutsk">Иркутск</string>
    <string name="kaluga">Калуга</string>
    <string name="kolomna">Коломна</string>
    <string name="krasnodar">Краснодар</string>
    <string name="krasnoyarsk">Красноярск</string>
    <string name="lipetsk">Липецк</string>
    <string name="magadan">Магадан</string>
    <string name="murmansk">Мурманск</string>
    <string name="novorossiysk">Новороссийск</string>
    <string name="orel">Орёл</string>
    <string name="perm">Пермь</string>
    <string name="petropavlovsk_k">Петропавловск-Камчатский</string>
    <string name="petrozavodsk">Петрозаводск</string>
    <string name="Pskov">Псков</string>
    <string name="pyatigorsk">Пятигорск</string>
    <string name="rostov_on_don">Ростов-на-Дону</string>
    <string name="Rzhev">Ржев</string>
    <string name="saransk">Саранск</string>
    <string name="saratov">Саратов</string>
    <string name="smolensk">Смоленск</string>
    <string name="sochi">Сочи</string>
    <string name="stavropol">Ставрополь</string>
    <string name="syzran">Сызрань</string>
    <string name="tobolsk">Тобольск</string>
    <string name="tver">Тверь</string>
    <string name="ufa">Уфа</string>
    <string name="ulan_ude">Улан-Удэ</string>
    <string name="volgograd">Волгоград</string>
    <string name="volokolamsk">Волоколамск</string>
    <string name="voronezh">Воронеж</string>
    <string name="vyborg">Выборг</string>
    <string name="yoshkar_ola">Йошкар-Ола</string>
    <string name="zvenigorod">Звенигород</string>
    <string name="show_photo"><u>Показать только фото</u></string>
    <string name="ivanovo">Иваново</string>
    <string name="kostroma">Кострома</string>
    <string name="rostov_v">Ростов Великий</string>
</resources>