<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/weather">

    <TextView
        android:id="@+id/headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/common_spacing_16"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_42"
        android:textStyle="bold"
        tools:text="Санкт-Петербург"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/head_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_12"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_70"
        tools:text="+17 C"
        android:layout_marginStart="@dimen/fab_margin_20"
        app:layout_constraintEnd_toStartOf="@id/head_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headline" />

    <ImageView
        android:id="@+id/head_icon"
        android:layout_width="@dimen/icon_size_76"
        android:layout_height="@dimen/icon_size_76"
        android:layout_marginEnd="@dimen/fab_margin_20"
        tools:src="@drawable/sun"
        app:layout_constraintBottom_toBottomOf="@id/head_temp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/head_temp"
        app:layout_constraintTop_toTopOf="@id/head_temp"
        android:contentDescription="@string/icon_weather" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/weather_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_12"
        android:layout_margin="@dimen/padding_start_4"
        android:backgroundTint="@color/PRIMARY_500"
        app:cornerRadius="@dimen/padding_12"
        android:text="@string/choose_city"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_14"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/detail_button"
        app:layout_constraintTop_toBottomOf="@id/head_temp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/detail_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_12"
        android:layout_margin="@dimen/padding_start_4"
        android:backgroundTint="@color/PRIMARY_500"
        app:cornerRadius="@dimen/padding_12"
        android:text="@string/weather_for_day"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/weather_button"
        app:layout_constraintTop_toBottomOf="@id/head_temp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_start_4"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/weather_button"
        tools:itemCount="3"
        tools:listitem="@layout/card_weather" />


</androidx.constraintlayout.widget.ConstraintLayout>